--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon bin/www.js",
+    "start": "cross-env PORT=3000 nodemon bin/www.js",
+    "start:4000": "cross-env PORT=4000 nodemon bin/www.js",
     "lint": "eslint ./ --fix --ext .js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
+    "debug": "^4.3.4",
+    "express": "^4.18.2",
     "knex": "^2.4.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
